--- a/src/app/symptoms-checker/body-map/body-map.component.html
+++ b/src/app/symptoms-checker/body-map/body-map.component.html
@@ -480,8 +480,8 @@ gAooooAKKKKBhS0lFAC0UCigQUUUUAFFFFABRRRQAUUUUAf/2Q==
        onmouseout=""
        style="fill:none;fill-opacity:0.96748;stroke:none" />
     <path
-       #chest 
-       id="path1456"
+       (click)="shoulderWasClicked($event)"
+       id="chest"
        style="font-variation-settings:normal;opacity:0.00899999;vector-effect:none;fill:#00eae8;fill-opacity:0.96748;stroke:#00e1ff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000000;stop-opacity:1"
        inkscape:label="chest"
        onmouseover="this.style.opacity=0.25"
