--- a/src/app/symptoms-checker/body-map/body-map.component.html
+++ b/src/app/symptoms-checker/body-map/body-map.component.html
@@ -489,7 +489,7 @@ gAooooAKKKKBhS0lFAC0UCigQUUUUAFFFFABRRRQAUUUUAf/2Q==
        d="M 288.19922 137.48828 C 257.80226 138.17766 229.66486 138.38549 200.45898 138.95703 C 189.02296 152.44175 180.64908 163.47137 171.8125 172.96094 L 170.86328 178.41992 L 178.62891 197.93945 L 186.60547 210.32422 L 191.85352 213.05273 L 210.74414 212.63281 L 224.59766 209.9043 L 232.1543 206.33594 L 240.9707 192.48242 L 243.91016 192.48242 L 252.93555 204.6582 L 266.36914 210.74414 L 284.63086 213.05273 L 298.69531 212.21484 L 304.15234 206.9668 L 312.54883 192.48242 L 315.24609 173.85156 L 302.60352 158.05859 L 288.19922 137.48828 z " />
     <path
       (click)="shoulderWasClicked($event)"
-       id="shoulder"
+       id="shoulders"
        style="font-variation-settings:normal;opacity:0;vector-effect:none;fill:#00ebe6;fill-opacity:1;stroke:#00ebe6;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;stop-color:#000000;stop-opacity:1"
        d="M 307.5 127.5 L 300.5 131 L 288.19922 137.48828 L 315.24609 173.85156 L 315.5 179 L 336 186 L 356.5 193.5 L 355.5 189.5 L 352.5 174.5 L 347 159.5 L 341 149 L 330.5 140 L 317.5 133.5 L 307.5 127.5 z M 177 129.5 L 168 135 L 151.5 143.5 L 144.5 154 L 139 166.5 L 134.5 178 L 134.5 190 L 164 184 L 171.8125 172.96094 L 182.5 157.5 L 198 144.5 L 205.5 137 L 199 134 L 181 131 L 177 129.5 z "
        onmouseover="this.style.opacity=0.25"
@@ -497,7 +497,7 @@ gAooooAKKKKBhS0lFAC0UCigQUUUUAFFFFABRRRQAUUUUAf/2Q==
     <path
        style="font-variation-settings:normal;opacity:1;vector-effect:none;fill:none;fill-opacity:1;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none"
        d="m 219.5,344 -19,-19 -8,-11 -0.5,-27 1,-9.5 -7,-35 -1.5,-25 7.35352,-4.44727 L 202.5,212.5 224.59766,209.9043 238,208 l 9.93555,0.1582 c 16.47986,-0.407 30.14656,4.43359 36.69531,4.89453 L 304.5,213 l -1,27.5 -4,36 1.5,35 -21.5,21.5 -11.5,12.5 z"
-       id="path1788"
+       id="abdomen"
        sodipodi:nodetypes="cccccccccccccccccccc" />
     
   </g>
