--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,7 @@
-<app-symptoms-checker></app-symptoms-checker>
+<app-nav></app-nav>
+<div class="image"></div>
+<!-- <app-symptoms-checker></app-symptoms-checker> -->
+<div class="intro">
+    <h1>SMART CURE</h1>
+    <p>bla bla yassine yassine</p>
+</div>
