--- a/src/app/symptoms-checker/symptoms-checker.component.css
+++ b/src/app/symptoms-checker/symptoms-checker.component.css
@@ -1,12 +1,19 @@
-.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 16px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
+.image2 {
+  background-image: url('../../assets/images/3.jpg');
+  background-repeat: no-repeat;
+  margin: 0 ;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  opacity: 75%;
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
+}
+app-body-map {
+  position: absolute;
+  right: -500px;
+  top: 10%;
+  opacity: 95%;
+  width: 5000px;
+  height: 5000px;
+}
